fix scrollbar not working on firefox

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,12 +14,17 @@
 }
 
 html,
-#root,
 body,
 main {
 	margin: 0;
 	width: 100vw;
 	height: 100vh;
+}
+
+body {
+	overflow-y: auto;
+	overflow-x: hidden;
+	height: 100dvh;
 }
 
 *[data-invert] {
