--- a/src/styles/pages/index.module.scss
+++ b/src/styles/pages/index.module.scss
@@ -1,6 +1,3 @@
 #index-page {
-	position: fixed;
-	overflow-y: auto;
-	overflow-x: hidden;
 	color: var(--dark);
 }
